--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    <div id="top"></div>
+    <div id="top">
+        Simple to do application
+    </div>
+
+    <textarea cols="3" rows="3"></textarea>
 </body>
 
 </html>
