--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="handle.js"></script>
+    <style>
+        body {
+            background-color: lightgreen;
+        }
+    </style>
 </head>
 
 <body>
@@ -13,7 +19,7 @@
         Simple to do application
     </div>
 
-    <textarea cols="3" rows="3"></textarea>
+    <button onclick="javascript:click()"></button>
 </body>
 
 </html>
