--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div id="top">
         Simple to do application
     </div>
+    <div id="todo-list"></div>
 
     <button onclick="javascript:click()"></button>
 </body>
