--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     </div>
     <div id="todo-list"></div>
 
-    <button onclick="javascript:click()"></button>
+    <button onclick="javascript:click">
+        Add reminder item
+    </button>
 </body>
 
 </html>
