--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         Add reminder item
     </button>
 
-    <button onclick="eRem"></button>
+    <button onclick="eRem">
+        Remove reminder item
+    </button>
 </body>
 
 </html>
