--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     </style>
     <script>
         function btnClicked() {
-            let ta = document.createElement("textarea")
+            let ta = document.createElement("textarea#reminder")
             document.getElementById("todo").append(ta)
         }
 
         function eRem() {
-            let ta = document.querySelector("textarea")
-            ta.remove();
+            let element = document.getElementById("reminder")
+            element.remove();
         }
     </script>
 </head>
