--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             document.getElementById("todo").append(ta)
         }
 
-        function eRem() {
+        function elementRemove() {
             let element = document.getElementById("reminder")
             element.remove();
         }
@@ -40,7 +40,7 @@
         Add reminder item
     </button>
 
-    <button onclick="eRem">
+    <button onclick="elementRemove()">
         Remove reminder item
     </button>
 </body>
