--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     </style>
     <script>
         function btnClicked() {
+            let div = document.createElement("div")
+            div.setAttribute("id","todo")
             let ta = document.createElement("textarea")
             ta.setAttribute("id", "reminder")
             document.getElementById("todo").append(ta)
@@ -28,13 +30,15 @@
             let element = document.getElementById("reminder")
             element.remove();
         }
+
+        function removeAll() {
+
+        }
     </script>
 </head>
 
 <body>
     <h1>Simple to do application</h1>
-
-    <div id="todo"></div>
 
     <button onclick="btnClicked()">
         Add reminder item
@@ -42,6 +46,10 @@
 
     <button onclick="elementRemove()">
         Remove reminder item
+    </button>
+
+    <button onclick="removeAll()">
+        Remove all item
     </button>
 </body>
 
