--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="handle.js"></script>
-    <style>
-        body {
-            background-color: lightgreen;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
     <script>
         function btnClicked() {
             let ta = document.createElement("textarea")
